jenkins pipeline file 2.0

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
     	}
 
     	stage('test'){
-    		when //algo ahi
+    		when{ //algo ahi
     			expression {params.test == true}
     		}
     		steps{
